[package]
name = "rutabaga_gfx_ffi"
version = "0.1.61"
authors = ["The ChromiumOS Authors + Android Open Source Project"]
edition = "2021"
description = "Handling virtio-gpu protocols with C API"
license-file = "LICENSE"

[lib]
name = "rutabaga_gfx_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
rutabaga_gfx = { path = "../", version = "0.1.61"}
libc = "0.2.93"
log = "0.4"

[features]
gbm = ["rutabaga_gfx/gbm"]
gfxstream = ["rutabaga_gfx/gfxstream"]
vulkano = ["rutabaga_gfx/vulkano"]
