[package]
name = "rutabaga_gfx_ffi"
version = "0.1.76"
authors = ["Magma GPU project"]
edition = "2021"
description = "FFI interface to rutabaga_gfx"
license = "BSD-3-Clause"
repository = "https://github.com/magma-gpu/rutabaga_gfx"
rust-version = "1.81.0"

[lib]
name = "rutabaga_gfx_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
rutabaga_gfx = { path = "../", version = "0.1.61"}
libc = "0.2.93"
log = "0.4"

[features]
gbm = ["rutabaga_gfx/gbm"]
gfxstream = ["rutabaga_gfx/gfxstream"]
vulkano = ["rutabaga_gfx/vulkano"]
